# imagemagick-desktop-maker

./: .gitignore  .python-version  Makefile  build.spec  imagemagick-desktop-maker.code-workspace  imagemagick-desktop-maker.py  imagemagick-desktop-maker.sh  imagemagick_desktop_maker.py  pyproject.toml  requirements.txt  wallpaper-maker.code-workspace
.github/workflows/: release-on-version-bump.yml
src/wallpaper_maker/: main.py
src/wallpaper_maker/modules/: argumentparser.py  effect_creator.py  logger.py  render.py  util.py
