[build-system]
    build-backend = "setuptools.build_meta"
    requires      = ["setuptools>=61", "wheel"]

[project]
    description     = "Create Wallpapers with Pillow from SVG logos"
    name            = "wallpaper-maker"
    readme          = "README.md"
    requires-python = ">=3.12"
    version         = "1.0.1"

    license = "AGPL-3.0-or-later"

    authors = [{ name = "Flo Greistorfer" }]

    dependencies = [
        "CairoSVG~=2.9.0",
        "Pillow~=12.0.0",
        "python_json_logger~=2.0.7",
        "rich_argparse~=1.7.1",
        "tqdm~=4.66.6",
    ]

    [project.scripts]
        wallpaper-maker = "wallpaper_maker.main:main"

[dependency-groups]
    dev = ["deptry", "pyinstaller", "ruff"]

[tool.setuptools.packages.find]
    where = ["src"]

[tool.setuptools.package-data]
    wallpaper-maker = []

[tool.ruff]
    line-length    = 140
    target-version = "py312"

    [tool.ruff.lint]
        ignore = ["E501"]
        select = ["B", "E", "F", "I", "UP"]

    [tool.ruff.format]
        indent-style = "space"
        quote-style  = "double"

[tool.deptry.per_rule_ignores]
    DEP003 = ["wallpaper_maker"]
